[package]

name = "pyrite"
version = "0.0.0"
authors = []

[[bin]]

name = "pyrite"
path = "src/main.rs"

[dependencies]
cgmath = "0.17"
image = "0.23"
obj = {version = "0.9", features = ["genmesh"] }
genmesh = "0.6"
rand = "0.7"
num_cpus = "1"
time = "0.2"
crossbeam = "0.7"
rayon = "^1.3.0"
collision = "0.20"
rand_xorshift = "0.2"

[dependencies.pyrite-config]
path = "../config"

[profile.release]
lto = true
