[package]
name = "pyrite"
version = "0.0.0"
authors = ["Erik Hedvall <hello@erikhedvall.nu>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[[bin]]
name = "pyrite"
path = "src/main.rs"

[dependencies]
cgmath = "0.17"
image = "0.23"
obj = { version = "0.9", features = ["genmesh"] }
genmesh = "0.6"
rand = "0.7"
num_cpus = "1"
crossbeam = "0.7"
rayon = "^1.3.0"
collision = "0.20"
rand_xorshift = "0.2"
palette = { git = "https://github.com/Ogeon/palette", default-features = false, features = [
	"std"
] }
noisy_float = "0.1"
rlua = "0.17"
rlua_serde = "0.4"
bumpalo = "^3.4"
path-slash = "0.1"

[build-dependencies]
csv = "^1.1"
quote = "^1.0"
serde = "^1.0"
