[package]
name = "pyrite"
version = "0.0.0"
authors = ["Erik Hedvall <hello@erikhedvall.nu>"]
license = "MIT OR Apache-2.0"
edition = "2021"

[[bin]]
name = "pyrite"
path = "src/main.rs"

[dependencies]
cgmath = "0.17"
image = "0.24.6"
obj = { version = "0.10.2" }
rand = "0.8.5"
num_cpus = "1"
crossbeam = "0.8.2"
collision = "0.20"
rand_xorshift = "0.3.0"
palette = { git = "https://github.com/Ogeon/palette", default-features = false, features = [
	"std"
] }
noisy_float = "0.2.0"
mlua = "0.8.8"
bumpalo = "^3.4"
path-slash = "0.2.1"
indicatif = "0.17.3"
bitflags = "2.1.0"
typed_nodes = { git = "https://github.com/Ogeon/typed_nodes" }

[build-dependencies]
csv = "^1.1"
quote = "^1.0"
serde = "^1.0"
